Bug #31484  	Cluster LOST_EVENTS entry not added to binlog on mysqld restart.